# otus_c_prog

03_types_homework-12926-ac0783/: CMakeLists.txt  README.md  main.c
04_types_contd_homework-12926-ae2162/: CMakeLists.txt  main.c
08_libraries_homework/: CMakeLists.txt  README.MD  main.c
08_search_sort_homework/: CMakeLists.txt  README.MD  hashmap_open.c  valgrind.sh
09_assembler_homework/: CMakeLists.txt  README.MD  main.c  valgrind-out.txt  valgrind.sh
09_assembler_homework/asm/: Makefile  main.asm
12_error_handling/: CMakeLists.txt  README.md  logger.c  logger.h  sample_app.c
13_curl/: Dockerfile  README.md
14_leaks/: README.md  clib.patch
15_daemon/: CMakeLists.txt  README.md  config.c  config.h  config.yaml  main.c  server.c  server.h
16_crc32/: CMakeLists.txt  README.md  main.c
16_oop_gstreamer/: CMakeLists.txt  main.c
16_oop_gtk/: CMakeLists.txt  main.c
17_log_reader/: CMakeLists.txt  README.md  main.c
21_telnet/: CMakeLists.txt  README.md  main.c
23_http_server/: CMakeLists.txt  README.md  main.c
26_ftrace/: CMakeLists.txt  README.md  main.c
27_driver/: CMakeLists.txt  Makefile  README.md  ringbuf_driver.c  test_ringbuf.c
29_dbstat/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.c
29_dbstat/data/: .my-healthcheck.cnf
29_dbstat/db_dumps/: oscar.sql
30_cube/: CMakeLists.txt  README.md  main.c
35_game/: CMakeLists.txt  README.md  main.c
point_wave_model/: CMakeLists.txt  README.md  integrator.c  integrator.h  netcdf_output.c  netcdf_output.h  point_wave_model.c  sandbox.ipynb  source_terms.c  source_terms.h  spectrum.c  spectrum.h
