cmake_minimum_required(VERSION 3.25.1)
project(08_libraries_homework C)
add_compile_options(-Wall -Wextra -Wpedantic -std=c11)
set(CMAKE_C_STANDARD 11)

find_package(CURL REQUIRED)
find_package(json-c REQUIRED)
add_executable(fetchWeather main.c)
include_directories(${json-c_INCLUDE_DIR})
include_directories(${JSON-C})
target_link_libraries(fetchWeather CURL::libcurl)
target_link_libraries(fetchWeather json-c::json-c)